# wayback-dl

./: .gitignore  ARCHITECTURE.md  CDX_API_EXAMPLES.md  CLAUDE.md  Dockerfile  PLANNED_WORK.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-fix.md  ci.yml  docs-sync.md  publish.yml  test-coverage.md  triage.md
src/wayback_dl/: __main__.py  cdx_api.py  cli.py  downloader.py  session.py  utils.py
tests/: test_downloader.py
